tests/neg-custom-args/captures/i16114.check
-- Error: tests/neg-custom-args/captures/i16114.scala:18:13 ------------------------------------------------------------
18 |      expect[Cap^] {  // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:20:8 -------------------------------------------------------------
20 |        fs  // error (limitation)
   |        ^^
   |        reference (fs : Cap^) is not included in the allowed capture set {io}
   |        of an enclosing function literal with expected type Unit ->{io} Unit
-- Error: tests/neg-custom-args/captures/i16114.scala:24:13 ------------------------------------------------------------
24 |      expect[Cap^] { // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:26:8 -------------------------------------------------------------
26 |        io  // error (limitation)
   |        ^^
   |        reference (io : Cap^) is not included in the allowed capture set {fs}
   |        of an enclosing function literal with expected type Unit ->{fs} Unit
-- Error: tests/neg-custom-args/captures/i16114.scala:30:13 ------------------------------------------------------------
30 |      expect[Cap^] {  // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:36:13 ------------------------------------------------------------
36 |      expect[Cap^](io) // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:39:13 ------------------------------------------------------------
39 |      expect[Cap^] { // error
   |             ^^^^
   |             Type variable T of method expect cannot be instantiated to box Cap^ since
   |             that type captures the root capability `cap`.
-- Error: tests/neg-custom-args/captures/i16114.scala:40:8 -------------------------------------------------------------
40 |        io.use()    // error
   |        ^^
   |        reference (io : Cap^) is not included in the allowed capture set {}
   |        of an enclosing function literal with expected type Unit -> Unit
-- Error: tests/neg-custom-args/captures/i16114.scala:41:8 -------------------------------------------------------------
41 |        io          // error
   |        ^^
   |        reference (io : Cap^) is not included in the allowed capture set {}
   |        of an enclosing function literal with expected type Unit -> Unit
